@@ -13,6 +13,7 @@ exempt of errors.
 - Arno Willig
 - Bob Ciora
 - Carlo Parata
+- Carl Benson
 - Chandra (inactiveneurons)
 - Chaos
 - Charles Nepveu (cnepveu)
