@@ -122,6 +122,7 @@ ithread_mutex_t GlobalClientSubscribeMutex;
 /*! rwlock to synchronize handles (root device or control point handle). */
 ithread_rwlock_t GlobalHndRWLock;
 
+
 /*! Mutex to synchronize the uuid creation process. */
 ithread_mutex_t gUUIDMutex;
 
